<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.auth.LoginFragment">

    <com.bangkit2023.isnangram.main.customview.EditTextEmail
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:hint="@string/hint_email"
        android:background="@drawable/bg_form_input"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:transitionName="email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bangkit2023.isnangram.main.customview.EditTextPassword
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:hint="@string/hint_password"
        android:background="@drawable/bg_form_input"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:transitionName="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <com.bangkit2023.isnangram.main.customview.AuthButton
        android:id="@+id/btn_login"
        android:transitionName="button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="15dp"
        android:text="@string/button_log_in"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ui_route_to_register"/>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>