<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.upload.UploadActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_upload"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="New Story"
        app:navigationIcon="@drawable/ic_clear"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_check"
            android:contentDescription="@string/desc_button_upload" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/desc_image_story" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:gravity="start"
        android:hint="@string/hint_desc_upload_story"
        android:inputType="text"
        android:maxLines="3"
        android:minHeight="200dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_preview"
        app:layout_constraintBottom_toTopOf="@id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description"
        app:layout_constraintBottom_toTopOf="@id/progress_circular" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
